--- a/poo2/trabDev/RPGMaster/src/main/java/com/example/Cadastro.form
+++ b/poo2/trabDev/RPGMaster/src/main/java/com/example/Cadastro.form
@@ -195,7 +195,7 @@
                                           </Group>
                                           <Group type="102" alignment="0" attributes="0">
                                               <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                                              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                                              <Component id="btnTerminarCadastro" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
@@ -241,7 +241,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jScrollPane1" min="-2" pref="41" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnTerminarCadastro" min="-2" max="-2" attributes="0"/>
                               <EmptySpace pref="176" max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -372,13 +372,16 @@
                         </Component>
                       </SubComponents>
                     </Container>
-                    <Component class="javax.swing.JButton" name="jButton1">
+                    <Component class="javax.swing.JButton" name="btnTerminarCadastro">
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="LM Roman 10" size="15" style="1"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Terminar"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTerminarCadastroActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
