--- a/poo2/trabDev/RPGMaster/src/main/java/com/example/HomeJogador.form
+++ b/poo2/trabDev/RPGMaster/src/main/java/com/example/HomeJogador.form
@@ -306,8 +306,9 @@
                                       <Component id="lblPvAtual" min="-2" pref="230" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" attributes="0">
-                                      <Component id="lblNumPvMaximo" min="-2" pref="71" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                                      <Component id="lblNumPvMaximo" min="-2" pref="59" max="-2" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="btnRolarDado" min="-2" max="-2" attributes="0"/>
                                           <Component id="lblPvMaximo" min="-2" max="-2" attributes="0"/>
@@ -355,13 +356,10 @@
                                   <Component id="pnlTesteContraMorte" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" attributes="0">
-                                              <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                                              <Component id="lblNumPvMaximo" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Component id="lblPvMaximo" alignment="0" min="-2" pref="48" max="-2" attributes="0"/>
+                                          <Component id="lblPvMaximo" min="-2" pref="48" max="-2" attributes="0"/>
+                                          <Component id="lblNumPvMaximo" min="-2" pref="55" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="formatedNumPvAtual" min="-2" pref="65" max="-2" attributes="0"/>
                                           <Component id="lblPvAtual" min="-2" pref="48" max="-2" attributes="0"/>
@@ -416,7 +414,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="LM Roman 10" size="36" style="1"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="12"/>
+                        <Property name="text" type="java.lang.String" value="0"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JLabel" name="lblModificador">
@@ -605,7 +603,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="LM Roman 10" size="48" style="1"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="30"/>
+                        <Property name="text" type="java.lang.String" value="8"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JFormattedTextField" name="formatedNumPvAtual">
@@ -2118,7 +2116,7 @@
                       <Font name="LM Roman 10" size="18" style="1"/>
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="2" rowCount="5">
+                      <Table columnCount="2" rowCount="0">
                         <Column editable="true" title="Valor Inicativa" type="java.lang.Integer"/>
                         <Column editable="true" title="Personagem" type="java.lang.String"/>
                       </Table>
