--- a/poo2/trabDev/RPGMaster/src/main/java/com/example/Login.form
+++ b/poo2/trabDev/RPGMaster/src/main/java/com/example/Login.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.JToggleButton" name="jToggleButton1">
       <Properties>
@@ -9,7 +9,7 @@
     </Component>
   </NonVisualComponents>
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="0"/>
+    <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Login - RPGMaster"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="a2" green="d3" red="e2" type="rgb"/>
@@ -242,6 +242,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="N&#xe3;o tenho cadastro"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSemCadastroActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
