--- a/poo2/trabDev/RPGMaster/src/main/java/com/example/cadastroFicha.form
+++ b/poo2/trabDev/RPGMaster/src/main/java/com/example/cadastroFicha.form
@@ -287,6 +287,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Terminar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTerminarFichaActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
