--- a/devWebI/aula/exercicio-fixacao/exercicio2/style.css
+++ b/devWebI/aula/exercicio-fixacao/exercicio2/style.css
@@ -1,47 +1,35 @@
 /* style.css */
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
+.light-gray-text {
+    color: gray;
 }
 
-header {
-    background-color: #4CAF50;
-    color: white;
-    padding: 15px;
-    text-align: center;
+h1 {
+    font-size: 2em;
+    font-weight: bold;
+    align-self: center;
 }
 
-nav {
-    margin: 20px;
+.letra-principal {
+    font-size: 1em;
+    text-align: justify;
+    font-family: "UOLtext", Arial, sans-serif;
+    line-height: 1.5;
 }
 
-nav a {
-    margin: 0 15px;
-    text-decoration: none;
-    color: #4CAF50;
+h2 {
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #000;
+    font-family: "UOLtext", Arial, sans-serif;
+
+    border-radius: 10px;
 }
 
-nav a:hover {
-    text-decoration: underline;
+a {
+    color: red;
 }
 
-main {
-    margin: 20px;
-    padding: 20px;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-footer {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+ul li::marker {
+    color: red;
 }
